[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
bytes = "1.1.0"
serde = {version="1.0.159", features=["derive"]}
serde_json = "1.0.95"
lazy_static = "1.4.0"
